--- a/vignettes/duality.Rmd
+++ b/vignettes/duality.Rmd
@@ -25,15 +25,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup, echo = FALSE}
+```{r setup, echo = FALSE, warning=FALSE}
 library(halfedgedatastructr)
 library(kableExtra)
 library(magrittr)
 library(stringr)
 library(rgraph6)
 library(cxhull)
-# options(rgl.useNULL = TRUE) # Suppress the separate window.
-# library(rgl)
 source("./rgl_setup.R")
 rgl::setupKnitr(autoprint = TRUE)
 ```
