--- a/vignettes/duality.Rmd
+++ b/vignettes/duality.Rmd
@@ -32,6 +32,7 @@ library(magrittr)
 library(stringr)
 library(rgraph6)
 library(cxhull)
+library(ggplot2)
 source("./rgl_setup.R")
 rgl::setupKnitr(autoprint = TRUE)
 ```
@@ -46,7 +47,7 @@ rgl::setupKnitr(autoprint = TRUE)
 > of view and in principle they are all dualities."
 -@atiyah2007duality
 
-In this vignette we begin to explore how the half-edge data structure exposes different sorts of duality, via the *cut* and *fold* operations:
+In this vignette we look at how the half-edge data structure exposes different sorts of duality, via the *cut* and *fold* operations:
 
 * The duality between a polytope and its geometric dual,
 
@@ -56,8 +57,8 @@ In this vignette we begin to explore how the half-edge data structure exposes di
 
 ## Preliminaries
 
-We will be careful to choose very specific data to work with in this vignette. 
-This is a limitation in that we won't know how the results that we see here might generalize to other cases, and it is a freedom in so far as we know exactly what assumptions we are relying on. For example, in this vignette we only consider a very particular cube, and its dual octahedron. The coordinates of this cube are based on the binary representation of the integers from 0 t0 7, translated to be centered on the origin, and ordered so that the dual cube of the dual octahedron is oriented the same way as the cube itself is.^[In Figure 1, the outer cube on the left has the same orientation as the inner cube on the right. This is not an accident.] These will be our polytopes.
+We carefully choose very specific data to work with in this vignette. 
+This is a limitation in that we won't know how the results that we see here might generalize to other cases, and it is a freedom since we know exactly what assumptions we are relying on. For example, in this vignette we only consider a very particular cube, and its dual octahedron. The coordinates of this cube are based on the binary representation of the integers from 0 to 7, translated to be centered on the origin, and ordered so that the dual cube of the dual octahedron is oriented the same way as the cube itself is.^[In Figure 1, the outer cube on the left has the same orientation as the inner cube on the right. This is not an accident.] These will be our (3d) polytopes.
 
 ```{r}
 dim = 3
@@ -215,18 +216,65 @@ opk
 # Do the look up:
 opk %>% apply(1, decode)
 ```
-Abstract, this looks something like what happens in arithmetic:
 
-```{r table2, echo=FALSE, message=FALSE, warnings=FALSE, results='asis'}
-tabl <- "
-| Plus |      |  | Minus  |
-|-----|:-----:|----:|----:|
-|  x  | x+u   | x-u |  x  |
-| x+u |  x    |  x  | x-u |
-"
-cat(tabl) 
+Abstractly, this looks something like what happens in arithmetic: we have a set of numbers, we get the next one by adding some *unit*, and we get to the previous one by subtracting the *unit*.
+
+```{r interface, echo=FALSE, message=FALSE, warnings=FALSE, fig.height=3, fig.width=5}
+get_box <- function(x, y, io){
+  w <- 1
+  h <- .75
+  off <- .25
+  ifxy <- cbind(
+    rbind(c(x,y),c(x,y+(h/3)),c(x,y+(2*h/3)),c(x,y+h)),
+    rbind(c(x+w,y),c(x+w,y+(h/3)),c(x+w,y+(2*h/3)),c(x+w,y+h))
+  ) 
+  ifbox <- cbind(
+    rbind(
+      ifxy[c(1,4),c(1:4)],
+      c(ifxy[1,1:2], ifxy[4,1:2]),
+      c(ifxy[1,3:4], ifxy[4,3:4])
+    ),
+    rbind(ifxy[2:3,1:2], ifxy[2:3,3:4]),
+    c(-off, -off, off, off)
+  ) %>% data.frame() %>% `colnames<-`(c('u','v','x','y','px','py','hoff')) %>% 
+    cbind(label=c('cut','fold','cst','ost')) %>% 
+    cbind(value=io)
+}
+
+plot_box <- function(data, op, poly) {
+  list(
+    geom_segment(data=data, aes(x=u,y=v,xend=x,yend=y)),
+    geom_point(data = data[1:2,], aes(x=px, y=py), size = 5, shape = 21, fill = 'white'),
+    geom_point(data = data[3:4,], aes(x=px, y=py), size = 5, shape = 16),
+    geom_text(data = data[1:2,], aes(x=px, y=py, label=label), hjust = -.6),
+    geom_text(data = data[3:4,], aes(x=px, y=py, label=label), hjust = 1.8),
+    geom_segment(data = data[3:4,], aes(x=px, y=py, xend=px+hoff, yend=py), 
+                 arrow = arrow(length=unit(0.3, 'cm'))),
+    geom_text(data = data[3:4,], aes(x=px+hoff, y=py, label=value), hjust = -.6),
+    geom_segment(data = data[op,], aes(x=px+hoff, y=py, xend=px, yend=py), 
+                 arrow = arrow(length=unit(0.3, 'cm'))),
+    geom_text(data = data[op,], aes(x=px+hoff, y=py, label=value), hjust = 1),
+    geom_text(data = data[2,], aes(x=(x+u)/2, y=y), label = poly, vjust = 1.2)
+  )
+}
+
+ifbox_tl <- get_box(0.5, 1.5, c('a','a','a+u','a'))
+ifbox_bl <- get_box(0.5, 0, c('a','a','a','a-u'))
+ifbox_tr <- get_box(2.5, 1.5, c('a','a','a-u','a'))
+ifbox_br <- get_box(2.5, 0, c('a','a','a','a+u'))
+
+p <- ggplot() + 
+  scale_x_continuous(limits = c(0, 4.5)) +
+  coord_equal() +
+  theme_void()
+p <- p + plot_box(ifbox_tl, 2, 'cube')
+p <- p + plot_box(ifbox_bl, 1, 'cube')
+p <- p + plot_box(ifbox_tr, 2, 'octahedron')
+p <- p + plot_box(ifbox_br, 1, 'octahedron')
+print(p)
 ```
-So let's explore a little farther. Can we find something like behaves like *u* in the table above?
+
+So let's explore a little farther. Can we find something like behaves like *u* in the figure above?
 ```{r}
 # get the cube and the cube spanning trees together
 cube_ixs <- Reduce(rbind, lapply(1:384, function(k) {
@@ -261,9 +309,9 @@ cyc1mf <- permutations::get_cyc(pm,els[1]) %>%
 cyc1mf(299)
 ```
 
-We see that *299* is the result of applying the first cycle of the permutation to the element *1*. So *unit* means apply the permutation *once*. Also, we see that *minus* means invert the permutation.
+We see that *299* is the result of applying the first cycle of the permutation to the element *1*. So (for now) *unit* means apply the permutation *once*. Also, we see that *minus* means invert the permutation.
 
-Next we look at permutation is more detail.
+Next we look at the cyclec of the permutation is more detail.
 
 ```{r}
 # show them
@@ -281,7 +329,65 @@ lapply(cyc2, function(k) {
 }) %>% display_hes(c(3,4), shared = TRUE)
 ```
 
-What is interesting here?
+What is interesting here? At least the following 3 things:
 
+* If we ignore their geometry, the spanning trees are just a subset of the set of trees with 6 vertices (5 of 6), and of trees with 8 vertices (6 of 23).
+
+* The pairs of trees repeat.
+
+* Some, but not all  of the cubes in Figure 4 can be rotated and reflected to look like other ones.
+
+These things are easy to see with the tree in the upper right corner of the figure and the one in the lower left. Focus on the one missing edge that would turn the tree into a Hamiltonian cycle: **v7,v8** and **f1,f2** at the upper right, **v1,v6** and **f4,f6** at the lower right.
+
+The following Figure 5 summarizes these things from Figure 4.
+
+```{r, ring12, echo=FALSE, message=FALSE, warnings=FALSE, fig.cap=c("Figure 5. trees, permutations, and rotoreflections for the 2nd cycle"), fig.height=5, fig.width=5}
+
+get_coords <- function(r = 1) {
+  ddpts <- rbind(
+    c(1, 2+sqrt(3)) * c (1,1), 
+    c(1+sqrt(3), 1+sqrt(3)) * c (1,1),
+    c(2+sqrt(3), 1) * c (1,1),
+    c(2+sqrt(3), 1) *c (1,-1),
+    c(1+sqrt(3), 1+sqrt(3)) * c (1,-1),
+    c(1, 2+sqrt(3)) * c (1,-1),
+    c(1, 2+sqrt(3)) * c (-1,-1),
+    c(1+sqrt(3), 1+sqrt(3)) * c (-1,-1),
+    c(2+sqrt(3), 1) *c (-1,-1),
+    c(2+sqrt(3), 1) * c (-1,1), 
+    c(1+sqrt(3), 1+sqrt(3)) * c (-1,1),
+    c(1, 2+sqrt(3)) * c (-1,1)
+  ) %>% apply(c(1,2), function(x) {x = x*r})
+  ddpts
+}
+
+ddpts <- cbind(
+  cbind(get_coords(),
+  get_coords(0.70),
+  get_coords()[c(2:12,1),]) %>% data.frame(),
+  labelc=map12$cy2,
+  labelo=map12$fcy2,
+  colorc=factor(map12$cu),
+  coloro=factor(map12$oc)
+)
+
+mpts <- cbind(
+  get_coords(0.70)[c(1,4,2,3,10),],
+  get_coords(0.70)[c(6,9,7,5,12),]) %>% data.frame()
+
+ggplot(ddpts) +
+  geom_segment(aes(x=X1,y=X2,xend=X3,yend=X4),linewidth=1,color='grey20') +
+  geom_segment(aes(x=X3,y=X4,xend=X5,yend=X6),linewidth=1,color='royalblue') +
+  geom_curve(data=mpts[1:2,],aes(x=X1,y=X2,xend=X3,yend=X4),linewidth=1,color='firebrick') +
+  geom_curve(data=mpts[3,],aes(x=X1,y=X2,xend=X3,yend=X4),linewidth=1,color='orange') +
+  geom_curve(data=mpts[4:5,],aes(x=X1,y=X2,xend=X3,yend=X4),linewidth=1,color='purple') +
+  geom_label(aes(x=X1,y=X2, label = labelc, fill = colorc)) +
+  geom_label(aes(x=X3,y=X4, label = labelo, fill = coloro)) +
+  coord_equal() +
+  guides(fill = guide_legend(title="Tree",override.aes=aes(label=""))) +
+  theme_void()
+```
+
+## Half-Edges and Geometry
 
 ## References
