Try to fix git build error

--- a/vignettes/vignettes.bib
+++ b/vignettes/vignettes.bib
@@ -1,7 +1,7 @@
 @article{atiyah2007duality,
   title={Duality in mathematics and physics},
   author={Atiyah, MF},
-  journal={Confer{\`e}ncies FME},
+  journal={Conferencies FME},
   volume={5},
   pages={2007--2008},
   year={2007}
